--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="/icon.png" />
+    
 
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap"
@@ -17,11 +17,11 @@
     <link rel="stylesheet" href="style.css" />
 
     <script defer src="script.js"></script>
-    <title>mapty // Map your workouts</title>
+    <title>leaftea // Map your workouts</title>
   </head>
   <body>
     <div class="sidebar">
-      <img src="https://img.icons8.com/bubbles/100/natural-food.png" alt="natural-food" class="logo"/>
+      <img src="https://img.icons8.com/bubbles/100/natural-food.png" alt="leaftea" class="logo"/>
 
       <ul class="workouts">
         <form class="form hidden">
@@ -70,4 +70,3 @@
     <div id="map"></div>
   </body>
 </html>
-
